Merged ORCJAVA-443, r10911:11021